tests/paczka1/fuzzy1/33925934.err
Error in line 4: KoeL0Xdri7 S978 43,4
Error in line 11: qFaK8c S115 43,1
Error in line 24: KoeL0Xdri7 S]78 48,2
Error in line 26: C6z A764 21,09
Error in line 16: A764 A764 61,3
Error in line 31: 5F6hPzJ S115 84,4
